--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/components": "^10.6.1",
     "@vueuse/core": "^10.6.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.7.0",
     "vue-router": "^4.2.5",
     "vue3-lottie": "^3.2.0"
   },
